Widok strony domowej domyslnie wyswietlanej na start

--- a/SBD_Project/SBD_Project/SBD_Project.csproj
+++ b/SBD_Project/SBD_Project/SBD_Project.csproj
@@ -359,7 +359,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\IndexAdmin.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -445,6 +445,7 @@
     <Content Include="Views\Uprawnienia\Details.cshtml" />
     <Content Include="Views\Uprawnienia\Edit.cshtml" />
     <Content Include="Views\Uprawnienia\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
