Strona O nas + strona kontakt

--- a/SBD_Project/SBD_Project/SBD_Project.csproj
+++ b/SBD_Project/SBD_Project/SBD_Project.csproj
@@ -293,16 +293,23 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="IMG\addres.png" />
     <Content Include="IMG\cennik.png" />
     <Content Include="IMG\client.png" />
     <Content Include="IMG\driver.png" />
+    <Content Include="IMG\email.png" />
+    <Content Include="IMG\fast.png" />
     <Content Include="IMG\logo.png" />
     <Content Include="IMG\mvc_logo.png" />
     <Content Include="IMG\naprawa.jpg" />
+    <Content Include="IMG\offer.png" />
     <Content Include="IMG\paczka.jpg" />
     <Content Include="IMG\pb_logo.jpg" />
+    <Content Include="IMG\phone.png" />
     <Content Include="IMG\pracownik.png" />
     <Content Include="IMG\repair.jpg" />
+    <Content Include="IMG\security.png" />
+    <Content Include="IMG\security1.png" />
     <Content Include="IMG\serwis.png" />
     <Content Include="IMG\status.png" />
     <Content Include="IMG\transport.jpg" />
