--- a/SBD_Project/SBD_Project/SBD_Project.csproj
+++ b/SBD_Project/SBD_Project/SBD_Project.csproj
@@ -456,6 +456,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Career.cshtml" />
     <Content Include="Views\Home\IndexDriver.cshtml" />
+    <Content Include="Views\Home\IndexEmployee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
