--- a/SBD_Project/SBD_Project/Web.config
+++ b/SBD_Project/SBD_Project/Web.config
@@ -18,7 +18,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <!--<authentication mode="None" />-->
+  <authentication mode="Forms">
+    <forms loginUrl="~/Uzytkownik/Login" timeout="2880" />
+  </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
