--- a/SBD_Project/SBD_Project/SBD_Project.csproj
+++ b/SBD_Project/SBD_Project/SBD_Project.csproj
@@ -449,6 +449,7 @@
     <Content Include="Views\Odbior\Details.cshtml" />
     <Content Include="Views\Odbior\Edit.cshtml" />
     <Content Include="Views\Odbior\Index.cshtml" />
+    <Content Include="Views\Paczka\CreateNewPack.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
