Zmiany w createNewPack dodanie zlecenia

--- a/SBD_Project/SBD_Project/SBD_Project.csproj
+++ b/SBD_Project/SBD_Project/SBD_Project.csproj
@@ -464,6 +464,7 @@
     <Content Include="Views\Odbiors\Details.cshtml" />
     <Content Include="Views\Odbiors\Edit.cshtml" />
     <Content Include="Views\Odbiors\Index.cshtml" />
+    <Content Include="Views\Paczka\CreateNewPack.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
