--- a/SBD_Project/SBD_Project/Web.config
+++ b/SBD_Project/SBD_Project/Web.config
@@ -18,6 +18,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization uiCulture="en-US" culture="en-US"/>
+
     <!--<authentication mode="None" />-->
   <authentication mode="Forms">
     <forms loginUrl="~/Uzytkownik/Login" timeout="2880" />
